<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_prompt">Enter search query</string>
    <string name="site_prompt">Enter search site</string>
    <string name="search_label">Search</string>
    <string name="image_title_label">Image Title</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="filter_title">Advanced search options</string>
    <string name="image_size">Image Size</string>
    <string name="size_prompt">small</string>
    <string name="image_color">Color Filter</string>
    <string name="color_prompt">blue</string>
    <string name="image_type">Image Type</string>
    <string name="type_prompt">face</string>
    <string name="site_filter">Site Filter</string>

</resources>
