<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    tools:context="com.codepath.gridimagesearch.activities.FilterActivity">

    <TextView
        android:text="@string/filter_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tvLabel"
        android:textSize="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_size"
        android:id="@+id/tvSizeLabel"
        android:layout_below="@+id/tvLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="16dp"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_color"
        android:id="@+id/tvColorLabel"
        android:layout_below="@+id/tvSizeLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="16dp"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_type"
        android:id="@+id/tvTypeLabel"
        android:layout_below="@+id/tvColorLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="16dp"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/site_filter"
        android:id="@+id/tvSiteFilter"
        android:layout_below="@+id/tvTypeLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="16dp"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerSize"
        android:entries="@array/size_array"
        android:prompt="@string/size_prompt"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@+id/tvSizeLabel"
        android:gravity="right"
        android:layout_alignRight="@+id/tvSizeLabel"
        android:paddingRight="5dp"
        android:layout_marginRight="5dp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerColor"
        android:entries="@array/color_array"
        android:prompt="@string/color_prompt"
        android:layout_below="@+id/spinnerSize"
        android:layout_alignParentRight="true"
        android:paddingRight="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:gravity="right"
        android:layout_alignBottom="@+id/tvColorLabel"
        android:layout_alignRight="@+id/tvColorLabel" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerType"
        android:entries="@array/type_array"
        android:prompt="@string/type_prompt"
        android:layout_below="@+id/spinnerColor"
        android:layout_alignParentRight="true"
        android:paddingRight="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:layout_alignRight="@+id/tvTypeLabel" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etSite"
        android:hint="@string/site_prompt"
        android:layout_toRightOf="@+id/tvSiteFilter"
        android:layout_alignBottom="@+id/tvSiteFilter"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spinnerType"
        android:layout_gravity="bottom"
        android:textSize="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        android:id="@+id/btSave"
        android:onClick="onSubmit"
        android:layout_below="@+id/tvTypeLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp" />


</RelativeLayout>
